set up container class to prevent site from becoming too wide

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,10 @@ html {
     box-sizing: inherit;
 }
 
+.site-container {
+    max-width:1200px;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -369,12 +373,12 @@ a {
 }
 
 #banner {
+    margin: auto;
     background: url(../img/img03.png) no-repeat left bottom;
 }
 
 #banner img {
     height: auto;
-    margin: auto;
     width: 100%;
 }
 
